8235751: Assertion when triggering concurrent cycle during shutdown

Skip initial mark during shutdown and don't assert when that happens.

Reviewed-by: sjohanss, tschatzl